# HSLauncher

./: HSLauncher.cabal  LICENSE  README.md
src/: Core.hs  MPIJobs.hs
