name:                HSLauncher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HSLauncher#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          mrblairarchibald@gmail.com
copyright:           2017 Blair Archibald
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core, MPIJobs
  build-depends:       base >= 4.7 && < 5,
                       process == 1.4.3.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/HSLauncher
